@@ -1,4 +1,8 @@
+package ru.yandex;
+
+import java.util.Arrays;
 import java.util.List;
+import java.util.ArrayList;
 
 import org.junit.jupiter.api.Test;
 
@@ -6,49 +10,47 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import org.junit.jupiter.api.Test;
+
 public class WithProblemsTests {
 
-    private final String CONST = "const";
     private final static String bd = "pui";
 
-    @Test
-    public void equalsOneToOne(){
-        assertEquals("1", "1");
-    }
+        @Test
+        public void equalsOneToOne(){
+            assertEquals("1", "1");
+        }
 
 
-    @Test
-    public void assignValueToConstVar(){
-        CONST = "newValue";
-        assertEquals("newValue", CONST);
-    }
-
-    @Test
-    public static void equalsOneToOne(){
-        assertEquals(1, 1);
-    }
+        @Test
+        public void assignValueToConstVar(){
+            String CONST = "newValue";
+            assertEquals("newValue", CONST);
+        }
 
 
+        @Test
+        public void equalsOneToOneX(){
+            assertEquals(1, 1);
+        }
 
     @Test
     public void stringsMustBeEquals(){
         String res = "a";
 
-        if (bd == new String("pui")) {
-            res = "asd";
-        }
+            if (bd.equals(new String("pui"))) {
+                res = "asd";
+            }
 
         assertEquals("asd", res);
     }
 
     @Test
     public void successfullyRemovingFirstElementFromList(){
-        List<String> sourceData = List.of("1", "viskas", "chupocabra");
-        for (String element: sourceData){
-            sourceData.remove(element);
-        }
+        ArrayList<String> sourceData = new ArrayList<String>(Arrays.asList("1", "viskas", "chupocabra"));
+        sourceData.remove(0);
         assertFalse(sourceData.contains("1"));
     }
 
-
 }
+
